<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddToMainActivity">
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/hellotext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello world!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="变"
            tools:layout_editor_absoluteX="230dp"
            tools:layout_editor_absoluteY="229dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="314dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="看"
            tools:layout_editor_absoluteX="243dp"
            tools:layout_editor_absoluteY="307dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
