<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeLanguageMainActivity">

    <TextView
        android:id="@+id/text_view_language"
        android:layout_width="98dp"
        android:layout_height="36dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="64dp"
        android:text="@string/language_en"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/change_language_en"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_country"
        app:layout_constraintStart_toStartOf="@+id/edit_text_country"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_country" />

    <EditText
        android:id="@+id/edit_text_country"
        android:layout_width="178dp"
        android:layout_height="54dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="en"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_language"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>